--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.6.1",
+    "firebase": "^5.10.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.0.6",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.11.0"
+    "redux-firestore": "^0.7.3",
+    "redux-devtools-extension": "^2.13.8"
   },
   "scripts": {
     "start": "react-scripts start",
