--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "firebase": "^5.10.0",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^5.1.1",
@@ -14,8 +15,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.7.3",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-auth-wrapper": "^2.1.0",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-firestore": "^0.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
